--- a/cse190_listApp/res/layout/dish_details.xml
+++ b/cse190_listApp/res/layout/dish_details.xml
@@ -9,10 +9,9 @@
     <ImageView
         android:id="@+id/dish_picture"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="203dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_launcher" />
+        android:layout_centerHorizontal="true"/>
     
     <RelativeLayout 
 	    android:layout_width="match_parent"
