--- a/cse190_listApp/res/layout/write_review.xml
+++ b/cse190_listApp/res/layout/write_review.xml
@@ -11,7 +11,7 @@
     	<ImageView
         android:id="@+id/dish_picture"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="203dp"
         android:background="#FFFFFF"
         android:adjustViewBounds="true" 
        	android:layout_gravity="center"
