--- a/cse190_listApp/res/layout/dish_details.xml
+++ b/cse190_listApp/res/layout/dish_details.xml
@@ -98,6 +98,7 @@
 	        android:layout_marginLeft="5dp"
 	        style="?android:attr/ratingBarStyleSmall" 
 	        android:numStars="5"
+	        android:stepSize="0.1"
 	        android:isIndicator="true" />
 	    
 	    <TextView
