--- a/cse190_listApp/res/layout/display_review.xml
+++ b/cse190_listApp/res/layout/display_review.xml
@@ -39,6 +39,7 @@
         style="?android:attr/ratingBarStyleSmall"
         android:layout_toRightOf="@id/user_info" 
         android:numStars="5"
+        android:stepSize="0.5"
         android:isIndicator="true"/>
 
     <TextView
