--- a/cse190_listApp/res/layout/itemview.xml
+++ b/cse190_listApp/res/layout/itemview.xml
@@ -62,6 +62,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="42dp"
                 android:isIndicator="true"
+                android:stepSize="0.1"
                 android:numStars="5" />
 
         </RelativeLayout>
