--- a/cse190_listApp/res/layout/read_reviews.xml
+++ b/cse190_listApp/res/layout/read_reviews.xml
@@ -20,7 +20,8 @@
     <ListView
         android:id="@+id/reviews_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:listSelector="@android:color/transparent" >
     </ListView>
 
 </LinearLayout>
