--- a/cse190_listApp/res/layout/dish_details.xml
+++ b/cse190_listApp/res/layout/dish_details.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/dish_picture"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="203dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
