--- a/cse190_listApp/res/layout/splash.xml
+++ b/cse190_listApp/res/layout/splash.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/splash2">
 
-    <ImageView
-        android:id="@+id/dishpicture"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/splash" />
+<!--     <ImageView -->
+<!--         android:id="@+id/dishpicture" -->
+<!--         android:layout_width="match_parent" -->
+<!--         android:layout_height="match_parent" -->
+<!--         android:src="@drawable/splash" /> -->
 
 </LinearLayout>
