--- a/cse190_listApp/res/layout/singup.xml
+++ b/cse190_listApp/res/layout/singup.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+     android:id="@+id/scrollView1"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent" 
+     android:background="@drawable/explode_bkg">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/explode_bkg" >
+    android:orientation="vertical" >
 	
 	<LinearLayout 
 	    android:layout_width="match_parent"
@@ -100,3 +104,4 @@
 	     </RelativeLayout>
 	</LinearLayout>
 </LinearLayout>
+</ScrollView>
