--- a/cse190_listApp/res/layout/mainpage.xml
+++ b/cse190_listApp/res/layout/mainpage.xml
@@ -24,7 +24,7 @@
         android:ems="10"
         android:hint="Search"
         android:singleLine="true" 
-        android:imeOptions="actionDone"
+        android:imeOptions="actionSearch"
         android:background="@drawable/rectangleborder"
         >
 
